[flake8]
ignore = E128,E811,W503,E203,PT001,PT004,PT007,PT012,PT018,PT023,PL123
max_line_length = 100

[pydocstyle]
inherit = false
# google convention + D413
ignore = D10,D203,D212,D213,D214,D215,D404,D405,D406,D407,D408,D409,D410,D411,D413
match = .*\.py

[rstcheck]
ignore_directives =
    automodule,
    mdinclude,
ignore_messages=(Undefined substitution referenced: \":)

[metadata]
name = testing-results-cache
url = https://github.com/mkoura/testing-results-cache
maintainer = IOG Cardano Node Test Engineering
maintainer_email = martin.kourim@iohk.io
description = Tests re-run cache for cardano-node-tests
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    lxml
    flask
    flask-httpauth
